--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,63 @@
-
-.advert {
-  margin-left: 10%;
-  animation-name: moving-text;
-  animation-duration: 4s;
+/* styling for header */
+video{
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
-@keyframes moving-text {
-  from {margin-left: -30%;}
-  to {margin-left: 10%;}
+.video-container {
+  position: relative; /* Ensure the parent container has relative positioning */
+}
+
+.video-text {
+  text-align: center;
+  font-size:  150px;
+  position: absolute;
+  top:  50%; /* Position the top edge of the element at the middle of the container */
+  left:  50%; /* Position the left edge of the element at the middle of the container */
+  transform: translate(-50%, -50%); /* Shift the element up and left by half its own height and width */
+  color: rgb(235,  232,  232);  
+  padding:  10px;  
+  z-index:  100;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 4px 4px 20px black;
+}
+
+.video-text span {
+  color: #00d062;
+}
+
+.advert-container {
+  position: absolute;
+  top:  70%; /* Adjust this value to position it below the video-text */
+  left:  50%; /* Center the container horizontally */
+  transform: translate(-50%,  50%); /* Center the container using transform */
+  width:  100%; /* Full width of the video container */
+  text-align: center; /* Center the text within the advert container */
+  /* Additional styles to create space between the left side and the advert text */
+  padding-left:  20px;
+}
+
+/* slide animation */
+.advert {
+  padding-left: 20px;
+  animation: slide-and-fade-in  1.7s forwards; /* Apply the animation */
+  color: white;
+  font-size: 15px;
+  text-shadow: 2px 2px 3px black;
+}
+
+@keyframes slide-and-fade-in {
+  0% {
+    margin-left: -100%; /* Start from the left outside of the container */
+    opacity:  0;
+  }
+  100% {
+    margin-left:  0; /* Slide to the initial position */
+    opacity:  1;
+  }
 }
 
 .city {
@@ -25,5 +75,5 @@
     cursor: pointer;
     transition: 0.3s;
     list-style: none;
-
 }
+
