--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,6 @@
   to {margin-left: 10%;}
 }
 
-.city {
-  max-width: 300px;
-
-
 /* styling for Airport dynamic elements */
 .airport{
     background-color: #f2f2f2;
@@ -26,4 +22,50 @@
     transition: 0.3s;
     list-style: none;
 
+}
+/* issue 20 changes */
+h1{
+  font-weight: 300;
+  font-style: italic;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+.page2{
+background: #E4E4EE;
+background: -moz-linear-gradient(top, #E4E4EE 0%, #236B9D 46%, #28A2D0 100%);
+background: -webkit-linear-gradient(top, #E4E4EE 0%, #236B9D 46%, #28A2D0 100%);
+background: linear-gradient(to bottom, #E4E4EE 0%, #236B9D 46%, #28A2D0 100%);
+  }
+.city-photo{
+  width: 30%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.city {
+  max-width: 100%;
+  height: auto;
+  display: block;
+
+}
+.card-img-top{
+width: 100%; 
+height: 500px; 
+object-fit: cover;
+transform: scale(0.8) translate(0, 5%);
+object-position: 50% 50%; 
+padding:10px;
+margin:10px;
+}
+.card-title{
+  text-align: center;
+}
+.poi {
+  border-style: none;
+  width: auto;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 30px;
+  margin: 20px 20px 20px 20px ;
+ 
 }
