--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,3 +27,14 @@
     list-style: none;
 
 }
+
+fieldset {
+  border: 0;
+}
+label {
+  display: block;
+  margin: 30px 0 0 0;
+}
+.overflow {
+  height: 200px;
+}
