--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,16 +62,24 @@ video{
 
 /* styling for Airport dynamic elements */
 .airport{
-    background-color: #f2f2f2;
+    background-color: #1583bd;
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
-    box-shadow: 0 0 10px #000;
+    box-shadow: 0 0 10px #a6bbc4;
     text-align: center;
     cursor: pointer;
     transition: 0.3s;
     list-style: none;
+    color: white;
 }
+.heading{
+    font-size: 30px;
+    font-weight: bold;
+    color: #11012c;
+    text-align: center;
+}
+
 
 /* issue 20 changes */
 h1{
