--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 /* styling for header */
 video{
   width: 100%;
@@ -45,7 +48,7 @@ video{
   padding-left: 20px;
   animation: slide-and-fade-in  1.7s forwards; /* Apply the animation */
   color: white;
-  font-size: 15px;
+  font-size: 25px;
   text-shadow: 2px 2px 3px black;
 }
 
@@ -112,11 +115,14 @@ margin:10px;
 }
 .poi {
   border-style: none;
-  width: auto;
+  /* width: auto; */
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 30px;
-  margin: 20px 20px 20px 20px ;
+  margin: 20px 10px 20px 10px ; 
  
 }
 
+span {
+  color:crimson;
+}
