--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,32 @@
 * {
   box-sizing: border-box;
 }
+
 /* styling for header */
-video{
+video {
   width: 100%;
   height: 300px;
   object-fit: cover;
 }
 
 .video-container {
-  position: relative; /* Ensure the parent container has relative positioning */
+  position: relative;
+  /* Ensure the parent container has relative positioning */
 }
 
 .video-text {
   text-align: center;
-  font-size:  150px;
+  font-size: 150px;
   position: absolute;
-  top:  50%; /* Position the top edge of the element at the middle of the container */
-  left:  50%; /* Position the left edge of the element at the middle of the container */
-  transform: translate(-50%, -50%); /* Shift the element up and left by half its own height and width */
-  color: rgb(235,  232,  232);  
-  padding:  10px;  
-  z-index:  100;  
+  top: 50%;
+  /* Position the top edge of the element at the middle of the container */
+  left: 50%;
+  /* Position the left edge of the element at the middle of the container */
+  transform: translate(-50%, -50%);
+  /* Shift the element up and left by half its own height and width */
+  color: rgb(235, 232, 232);
+  padding: 10px;
+  z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,19 +39,25 @@ video{
 
 .advert-container {
   position: absolute;
-  top:  70%; /* Adjust this value to position it below the video-text */
-  left:  50%; /* Center the container horizontally */
-  transform: translate(-50%,  50%); /* Center the container using transform */
-  width:  100%; /* Full width of the video container */
-  text-align: center; /* Center the text within the advert container */
+  top: 70%;
+  /* Adjust this value to position it below the video-text */
+  left: 50%;
+  /* Center the container horizontally */
+  transform: translate(-50%, 50%);
+  /* Center the container using transform */
+  width: 100%;
+  /* Full width of the video container */
+  text-align: center;
+  /* Center the text within the advert container */
   /* Additional styles to create space between the left side and the advert text */
-  padding-left:  20px;
+  padding-left: 20px;
 }
 
 /* slide animation */
 .advert {
   padding-left: 20px;
-  animation: slide-and-fade-in  1.7s forwards; /* Apply the animation */
+  animation: slide-and-fade-in 1.7s forwards;
+  /* Apply the animation */
   color: white;
   font-size: 25px;
   text-shadow: 2px 2px 3px black;
@@ -54,17 +65,20 @@ video{
 
 @keyframes slide-and-fade-in {
   0% {
-    margin-left: -100%; /* Start from the left outside of the container */
-    opacity:  0;
+    margin-left: -100%;
+    /* Start from the left outside of the container */
+    opacity: 0;
   }
+
   100% {
-    margin-left:  0; /* Slide to the initial position */
-    opacity:  1;
+    margin-left: 0;
+    /* Slide to the initial position */
+    opacity: 1;
   }
 }
 
 /* styling for Airport dynamic elements */
-.airport{
+.airport {
   background-color: #00d062;
   padding: 10px;
   margin: 10px;
@@ -82,109 +96,130 @@ video{
   width: 90%;
   display: flex;
 }
-.heading{
+
+.heading {
   font-size: 30px;
   font-weight: bold;
   color: #11012c;
   text-align: center;
 }
+
 #map {
   height: 400px;
   width: 95%;
-  position: relative; /* issue 49 changes */
-  top:700px;
-  left:30px;
+  position: relative;
+  /* issue 49 changes */
+  top: 670px;
+  left: 30px;
   padding: 10px;
   margin: 10px;
 }
 
 /* issue 49 changes */
-.city{
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  width: auto;
-  height: auto;
-}
-
-.city-photo{
-  width: 30%;
-  background-color: white;
-  position: relative;
-  top:30px;
-  left:30px;
-}
 .city {
-  width: 100%; 
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 100%;
   height: 530px;
   position: absolute;
 }
-.card-img-top{
-  width: 100%; 
-  height: 450px; 
+
+.city-photo {
+  width: 30%;
+  background-color: white;
+  position: relative;
+  top: 30px;
+  left: 20px;
+}
+
+.city-photo:hover {
+    box-shadow: 20px 30px 40px 20px rgba(28, 131, 169, 0.6),
+    0px 45px 26px 0px rgba(62, 36, 166, 0.14);
+}
+
+
+.card-img-top {
+  width: 100%;
+  height: 450px;
   object-fit: cover;
   position: absolute;
 }
-.card-title{
+
+.card-title {
   text-align: center;
   position: absolute;
-  top:88%;
-  left:40%;
+  top: 88%;
+  left: 40%;
 }
-.poi{
+
+.poi {
   border-style: none;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 30px;
-  margin: 20px 10px 20px 10px ;
-  height:300px;
+  margin: 20px 10px 20px 10px;
+  height: 300px;
 }
+
 #exchange-rate {
   position: relative;
   top: 550px;
   left: 50px;
-  width:300px;
+  width: 300px;
 }
-.poistlye{
+
+.poistlye {
   position: relative;
   top: 550px;
   left: 40px;
   background-color: White;
   width: 1180px;
 }
-.input-group{
-  box-shadow:  0 0 10px #bef4d7;
+
+.input-group {
+  box-shadow: 0 0 10px #bef4d7;
   gap: 5px;
 }
-.poioption{
+
+.poioption {
   position: relative;
   left: 45px;
   width: 100px;
   height: auto;
 }
-#poiselector{
+
+#poiselector {
   width: auto;
   height: auto;
   left: -40px;
   position: relative;
 
 }
-.poi-address{
+
+.poi-address {
   left: 200px;
   position: relative;
   top: -70px;
 }
+
 #span-poi {
-  color:black;
-  font-weight:bold;
+  color: black;
+  font-weight: bold;
   font-size: 15px;
 }
+
 #exchange-rate {
   position: relative;
   top: 550px;
   left: 50px;
-  width:300px;
+  width: 300px;
 }
 
-#countryicon{
+#countryicon {
   width: 20px;
   height: 20px;
+}
+
+#citydefault{
+  font-style: italic;
+  font-size: 25px;
 }
