fix #64 fix #63, fix airport display, fix api keyreplace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ video {
   border-radius: 10px;
   box-shadow: 0 0 10px #bef4d7;
   text-align: center;
-  cursor: pointer;
+  /* cursor: pointer; */
   transition: 0.3s;
   list-style: none;
   color: white;
