--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -77,18 +77,6 @@ video {
   }
 }
 
-/* styling for Airport dynamic elements */
-.airport {
-  background-color: #00d062;
-  padding: 10px;
-  margin: 10px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px #bef4d7;
-  text-align: center;
-  transition: 0.3s;
-  list-style: none;
-  color: white;
-}
 
 .heading {
   font-size: 30px;
@@ -101,7 +89,6 @@ video {
   height: 400px;
   width: 95%;
   position: relative;
-  /* issue 49 changes */
   top: 670px;
   left: 30px;
   padding: 10px;
@@ -113,12 +100,11 @@ video {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 100%;
   height: 530px;
-  position: absolute;
   cursor: pointer;
 }
 
 .city-photo {
-  width: 30%; */
+  width: 30%;
   background-color: white;
   position: relative;
   top: 30px;
@@ -126,10 +112,9 @@ video {
 }
 
 .city:hover {
-    box-shadow: 5px 10px 10px 0px rgba(27, 154, 63, 0.6),
+  box-shadow: 5px 10px 10px 0px rgba(27, 154, 63, 0.6),
     0px 10px 10px 0px rgba(62, 36, 166, 0.14);
 }
-
 
 .card-img-top {
   width: 100%;
@@ -139,10 +124,8 @@ video {
 }
 
 .card-title {
-  text-align: center;
   position: absolute;
   top: 88%;
-  left: 40%;
 }
 
 .poi {
@@ -151,34 +134,32 @@ video {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 30px;
   margin: 20px 10px 20px 10px;
-  height: 300px;
 }
 
-#exchange-rate {
-  position: relative;
-  top: 550px;
-  left: 50px;
-  width: 300px;
+.exandpoi {
+  display: grid;
+  grid-template-columns: 300px auto;
+}
+
+.selectorandpoi {
+  display: grid;
+  grid-template-columns: 270px auto;
 }
 
 .poistlye {
-  position: relative;
-  top: 550px;
-  left: 40px;
   background-color: White;
-  width: 1180px;
 }
 
 .input-group {
   box-shadow: 0 0 10px #bef4d7;
   gap: 5px;
 }
+
 .input-group>::placeholder {
-  color:#bef4d7;
+  color: #bef4d7;
 }
+
 .poioption {
-  position: relative;
-  left: 45px;
   width: 100px;
   height: auto;
 }
@@ -186,15 +167,9 @@ video {
 #poiselector {
   width: auto;
   height: auto;
-  left: -40px;
-  position: relative;
+  padding: 15px;
+  margin-left: 5px;
 
-}
-
-.poi-address {
-  left: 200px;
-  position: relative;
-  top: -70px;
 }
 
 #span-poi {
@@ -203,46 +178,50 @@ video {
   font-size: 15px;
 }
 
-#exchange-rate {
-  position: relative;
-  top: 550px;
-  left: 50px;
-  width: 300px;
-}
-
 #countryicon {
   width: 20px;
   height: 20px;
 }
 
-#citydefault{
+#citydefault {
   font-style: italic;
   font-size: 25px;
 }
-.air{
-  position: relative;
-  top: 600px;
-  left: 50px;
-  width: 97%;
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
 
 @media only screen and (max-width: 1024px) {
-  .card-title, #citydefault, .advert {
-      font-size: medium;
+
+  .card-title,
+  #citydefault,
+  .advert {
+    font-size: medium;
   }
 }
 
 @media only screen and (max-width: 450px) {
-  .card-title, #citydefault, .advert, .video-text {
-      font-size: small;
+
+  .card-title,
+  #citydefault,
+  .advert,
+  .video-text {
+    font-size: small;
   }
+
 }
 
 @media only screen and (max-width: 900px) {
   .video-text {
-      font-size: 70px;
+    font-size: 70px;
+  }
+
+  .selectorandpoi {
+    display: grid;
+    grid-template-columns: 100%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .exandpoi {
+    display: grid;
+    grid-template-columns: 100%;
   }
 }
